--- a/css/roberts.css
+++ b/css/roberts.css
@@ -7,7 +7,7 @@
     text-align: left;
     font-family: "Menlo", "Courier New", monospace;
     font-size: 0.9em;
-    color: black;
+    color: white;
     padding: 8px;
     white-space: pre;
 }
